--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ script:
 - npm run test:coverage && cat test-coverage/lcov.info | node_modules/.bin/coveralls
 - npm run build
 deploy:
+  skip_cleanup: true
   provider: npm
   email: dev@noblockno.party
   api_key:
