--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@noblocknoparty/shared",
-  "version": "1.5.2",
+  "name": "@wearekickback/shared",
+  "version": "1.6.0",
   "description": "Shared utils between client and server",
   "main": "dist/index.js",
   "module": "src/index.js",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/noblocknoparty/shared.git"
+    "url": "git+https://github.com/wearekickback/shared.git"
   },
   "keywords": [
     "ethereum",
@@ -29,9 +29,9 @@
   "author": "Ramesh Nair <ram@hiddentao.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/noblocknoparty/shared/issues"
+    "url": "https://github.com/wearekickback/shared/issues"
   },
-  "homepage": "https://github.com/noblocknoparty/shared#readme",
+  "homepage": "https://github.com/wearekickback/shared#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
