--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "babel src -d dist --ignore *.test.js",
     "lint": "eslint src",
     "test": "jest --no-cache",
-    "test:coverage": "yarn test --coverage"
+    "test:coverage": "npm test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
+    "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "lodash.get": "^4.4.2",
     "validator": "^10.8.0",
